EPBDS-15701 Add support of "collect" keyword in rest API for Smart/Simple Rules and Lookup. Additionally, map compilation messages for each table if any. Fix existing integration tests